--- a/setup.cfg
+++ b/setup.cfg
@@ -7,10 +7,10 @@ long_description_content_type = text/markdown
 author = Antoine Balaine
 author_email = antoine@balaine.com
 license = GNU General Public License v2 or later (GPLv2+)
-url = ""
+url = "https://github.com/AntoineBalaine/bepo-steno"
 project_urls =
-	Source Code = ""
-	Issue Tracker = ""
+	Source Code = "https://github.com/AntoineBalaine/bepo-steno"
+	Issue Tracker = "https://github.com/AntoineBalaine/bepo-steno/issues"
 classifiers =
 	Development Status :: 5 - Production/Stable
 	Environment :: Plugins
@@ -22,13 +22,14 @@ classifiers =
 	Programming Language :: Python :: 3.7
 	Programming Language :: Python :: 3.8
 	Programming Language :: Python :: 3.9
-keywords = plover plover_plugin
+keywords = plover plover_plugin steno bépo
 
 [options]
 zip_safe = True
 python_requires>=3.6
 install_requires =
 	plover>=4.0.0.dev9
+  plover-split-at-apostrophe @ https://github.com/AntoineBalaine/plover-split-at-apostrophe.git
 include_package_data = True
 packages =
 	plover_bepo
