ajouts user.json

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,7 +29,7 @@ zip_safe = True
 python_requires>=3.6
 install_requires =
 	plover>=4.0.0.dev9
-  plover-split-at-apostrophe @ https://github.com/AntoineBalaine/plover-split-at-apostrophe.git
+  #plover-split-at-apostrophe @ https://github.com/AntoineBalaine/plover-split-at-apostrophe.git
 include_package_data = True
 packages =
 	plover_bepo
