--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
-
+plover_bepo.egg-info
 plover_bepo/__pycache__
-plover_bepo/__pycache__
+plover_bepo/.idea
+plover_bepo/scripts/.vscode
+plover_bepo.egg-info
